    (Issue #2666, PR #3565)
  * Fixed DumpReader triclinic box dimensions reading. (Issue #3386, PR #3403)
  * Updated the badge in README of MDAnalysisTest to point to Github CI Actions
  * Fixed FrameIteratorIndices doesn't rewind. (Issue #3416)
  * Fixed BAT method Cartesian modifies input data. (Issue #3501)

Enhancements
  * LinearDensity now works with updating AtomGroups (Issue #2508, PR #3617)
  * Link PMDA in documentation (PR #3652)
  * Added MSD example where multiple replicates are combined(Issue #3578
    PR #3633)
  * PCA class now has an inverse-PCA function. The inverse transform can
    also be extrapolated to certain non-PCA atoms. (PR #3596, Issue #2703)
  * `DistanceMatrix` class in MDAnalysis.analysis.diffusionmap now also
    accepts `AtomGroup` as a valid argument (Issue #3486, PR #3541)
  * Improves the RDKitConverter's accuracy (PR #3044): AtomGroups containing
    monatomic ion charges or edge cases with nitrogen, sulfur, phosphorus and
    conjugated systems should now have correctly assigned bond orders and
    charges.
  * New optimized AnalysisBase derived Watson-Crick distance analysis class in
    analysis.nucleicacids
  * CRD extended format can now be explicitly requested with the `extended`
    keyword (Issue #3605)

Changes
  * `fasteners` package is now a core dependency (Issues #3230, #1988, PR #3375)
  * The minimm Python, NumPy, and SciPy versions (following NEP29) are now 3.8, 
    1.19, and 1.5.0; GSD now also has a minimum version of 1.9.3 and networkx
    has minimum version 2.0 (Issue #3665)
  * LinearDensity now saves the histogram bin edges for easier plotting as 
    "hist_bin_edges" for each dimension xyz in the results dictionary.
    (Issue #2508, PR #3617)
  * ITPParser no longer adds an angle for water molecules that have the SETTLE
    constraint applied to them. This mirrors the way the constraint is handled
    in AMBER. (Issue #2417, PR #3564)

Deprecations